remove unneeded width auto

--- a/demo/style.css
+++ b/demo/style.css
@@ -379,7 +379,10 @@ button {
   margin-bottom: 1.5em; }
 
 .thumbnail-wrapper {
-  width: 25%; }
+  width: 100%; }
+  @media (min-width: 600px) {
+    .thumbnail-wrapper {
+      width: 25%; } }
 
 .image-wrapper {
   display: block;
